frame/support/test/tests/construct_runtime_ui/double_module_parts.stderr
error: `Config` was already declared before. Please remove the duplicate declaration
 --> tests/construct_runtime_ui/double_module_parts.rs:7:37
  |
7 |         Balance: balances::{Config, Call, Config<T>, Origin<T>},
  |                                           ^^^^^^
