frame/support/test/tests/construct_runtime_ui/double_module_parts.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime
	{
		System: system::{Pallet},
		Balance: balances::{Config, Call, Config<T>, Origin<T>},
	}
}

fn main() {}
